# diffraction-visualization

./: .clang-format  CMakeLists.txt  default.nix  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 5g5bx2jdv4fwnb36xawcs0qg0gsp14mn-source
include/conversions/: wavelength_lookup.hpp
include/core/: aperture.hpp  apreture.hpp  attributes.hpp  fft.hpp  plane.hpp  plane_field.hpp  transform.hpp  types.hpp
include/physics/: propagation.hpp
src/: CMakeLists.txt  main.cpp
src/conversions/: CMakeLists.txt  wavelength_lookup.cpp
src/core/: CMakeLists.txt  aperture.cpp  fft.cpp  plane.cpp  plane_field.cpp  transform.cpp
src/physics/: CMakeLists.txt  propagation.cpp
tests/: CMakeLists.txt  aperture_tests.cpp  fft_tests.cpp  plane_field_tests.cpp  transformers_tests.cpp
